# CommandLib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: docs.yml
include/: Command.h  EventLoop.h  Trigger.h
include/CommandLib/: CommandScheduler.h
src/: Command.cpp  CommandScheduler.cpp  EventLoop.cpp  Trigger.cpp
test/: CommandLib.cpp
